# hgpi

./: .gitignore  CMakeLists.txt  README.md
src/: hgpi.h
src/Backend/D3D11/: D3D11Buffer.cpp  D3D11Buffer.h  D3D11Context.cpp  D3D11Context.h  D3D11Device.cpp  D3D11Device.h  D3D11Include.h  D3D11Shader.cpp  D3D11Shader.h  D3D11Swapchain.cpp  D3D11Swapchain.h  D3D11Util.h
src/HGPI/: Buffer.h  Context.h  Device.cpp  Device.h  Ref.h  Shader.h  Swapchain.h
